Fixed spacing

--- a/src/components/circleImage.scss
+++ b/src/components/circleImage.scss
@@ -12,6 +12,9 @@
 }
 
 .frame {
-    margin: 53px 34px;
+    margin-bottom: 53px;
+    margin-top: 0;
+    margin-right: 34px;
     display: inline-block;
+    vertical-align: middle;
 }
